--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "langchain-tavily>=0.1",
     "psycopg2-binary>=2.9.10",
+    "pandas>=2.2.2",
 ]
 
 
